# yolo-drone

./: .gitignore  pyproject.toml  requirements.txt
data/: .gitignore
notebook/dev/: tests.ipynb
notebook/sandbox/: clean_InfectedLeaves.ipynb  convert_yolodrone.ipynb  segment_synthetic.ipynb  test_yolo.ipynb  upload_download_data_from_clearml.ipynb
notebook/usage/: clean_infected_leaves.ipynb
yolo_drone/: __init__.py  __meta__.py
yolo_drone/scripts/: clean_infected_leaves.py  convert_coco_to_yolo.py  create_yolo_splits.py  segment_synthetic.py  slice_coco_sahi.py  slice_yolo_farinati.py  train_yolo.py
yolo_drone/src/: clean_data.py  segmentation.py  slicing.py  train.py
yolo_drone/src/config_files/: segmentation_config.yaml  train_config.yaml
